# First_CarDashboard

./: CMakeLists.txt  README.md  main.cpp
include/: canvas.h  window.h
src/: canvas.cpp  window.cpp
